# liveapi

./: .coverage  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LIVE_API_DESIGNER.md  Makefile  QUICKSTART.md  README.md  REFACTORING_PLAN.md  TODO.md  main.py  pyproject.toml  remy-test-repo
designer/: .gitignore  README.md  books_api.json  debug.html  demo_api.json  designer.html  designer_original.html  generate_from_json.py  index.html  main.js  preview.html  server.py  test_api.json  test_client.py
designer/components/: Editor.js  Header.js  Modal.js  NewApiModal.js  Preview.js  ResourceList.js
designer/styles/: main.css
designer/utils/: api.js  monaco-config.js
docs/: ARCHITECTURE.md  DATABASE_SETUP.md  SQLModelResource.md
examples/: api.yaml  generate_spec_example.py  my_api.py  run_example.py
examples/auth/: api.yaml  implementation.py  run_bearer_example.py  run_example.py
examples/convention-demo/: README.md  main.py
examples/exceptions/: api.yaml  implementation.py  run_example.py
examples/versioning/: README.md  implementation.py  run_versioned_example.py  users_v1.yaml  users_v2.yaml  users_v3.yaml
src/automatic/: __init__.py  app.py  auth.py  base.py  cli.py  exceptions.py  middleware.py  parser.py  request_processor.py  router.py  (+4 more)
tests/: __init__.py  test_api.py  test_auth.py  test_base_classes.py  test_basic.py  test_cli_autodiscovery.py  test_cli_project.py  test_cli_regenerate.py  test_convention.py  test_crud_handlers.py  test_database_integration.py  test_default_resource_service.py  test_designer_ui.py  test_end_to_end.py  test_error_handling.py  test_exception_mapping.py  test_integration_edge_cases.py  test_interactive_mode.py  test_liveapi_basic.py  test_liveapi_sync.py  test_liveapi_versioning.py  test_params.py  test_params_direct.py  test_performance.py  test_performance_simple.py  test_response_transformer.py  test_rfc7807_error_formatting.py  test_rfc9457_integration.py  test_schema_robustness.py  test_spec_generator.py  test_spec_validation.py  test_sql_model_resource_hooks.py  test_template_loading.py  test_validation_constraints.py  test_validation_layer.py  test_versioning.py  test_versioning_integration.py
(+73 files in other folders)
